--- a/css/style.css
+++ b/css/style.css
@@ -1,86 +1,102 @@
 *{
   margin: 0;
-}
-#banner{
-  height: 150px;
-  background-image: url(../img/pattern.png);
-  background-color: rgb(0, 153, 255);
+  padding: 0;
 }
 
 main, footer{
   padding: 20px;
 }
 
-#logoBanner{
-  width: 300px;
-  margin-top: 65px;
-  margin-left: 20px;
-}
-
-#titleautordata{
-  margin: 20px 0 20px 0;
-}
-
-#titleautordata h5{
-  color: gray;
-}
-
-.descrizionefoto{
-margin-bottom: 20px;
-}
-
-.evidenziato{
+.evidenziatore{
   background-color: yellow;
 }
 
-#articolo{
+/* ESERCIZIO BONUS */
+/* .container{
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+} */
+
+/* HEADER */
+header{
+  background-image: url(../img/pattern.png);
+  background-size: 30%;
+  background-color: rgb(0, 153, 255);
+  padding-top: 50px;
+  padding-left: 20px;
+  padding-bottom: 20px;
+}
+
+header .logo img{
+  width: 200px;
+}
+
+/* MAIN */
+main .dida{
+  color: gray;
+  font-size: .9rem;
+  margin-bottom: 10px;
+}
+
+main .dida p{
+  padding-bottom: 5px;
+}
+
+main .dida .name{
+  color: #4fa0ff;
+}
+
+main .photo .caption{
+  font-size: .8rem;
+  margin-bottom: 10px;
+}
+
+main .main-text{
+  margin-bottom: 10px;
+}
+
+main ul{
+  padding-left: 15px;
   margin-bottom: 20px;
 }
-ul{
-  margin-bottom: 40px;
-  padding-left: 20px;
-}
 
-#headertab{
-  background-color: rgb(26, 170, 230);
-  height: 1px;
-}
-#headertab td{
-  color: white;
-  font-weight: bold;
-}
-.topebottomrow{
-  background-color: rgba(178,230,242,255);
-}
-
-table{
-  margin-bottom: 40px;
+main table{
+  text-align: left;
   border-collapse: collapse;
 }
 
-td{
-  width: 33%;
+main table thead{
+  background-color: #4fa0ff;
+  color: white;
 }
 
-.imgfooter{
-  margin-bottom: 20px;
-  width: 250px;
-  height: 200px;
-  
+main table thead .text{
+  width: 50%;
 }
-#firstfooter{
+
+main table .odd{
+  background-color: aqua;
+}
+
+/* FOOTER */
+footer{
+  color: grey;
+}
+
+footer .image-box{
+  width: 290px;
+  height: 190px;
+  color: white;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+
+#monitor{
   background-image: url(../img/monitor.jpg);
 }
 
-#secondfooter{
+#graph{
   background-image: url(../img/graph.jpg);
 }
 
-footer h4{
-color: white;
-font-weight: bold;
-padding: 20px 20px;
-}
-footer h3{
-  color: grey;
-}
